# hmc-epg-project

./: .gitignore
firmware/src/: adc.c  bluetooth.c  main.c
hardware/DR3 - Shipped/: Project Symbol Library.kicad_sym  complete_EPG.kicad_pcb  complete_EPG.kicad_prl  complete_EPG.kicad_pro  complete_EPG.kicad_sch  complete_EPG.kicad_sch-bak  complete_EPG_library.bak  fp-info-cache  fp-info-cache.txt  fp-lib-table  sym-lib-table  tester
hardware/DR3 - Shipped/GerberFiles/: complete_EPG-B_Adhesive.gba  complete_EPG-B_Cu.gbl  complete_EPG-B_Mask.gbs  complete_EPG-B_Paste.gbp  complete_EPG-B_Silkscreen.gbo  complete_EPG-Edge_Cuts.gm1  complete_EPG-F_Adhesive.gta  complete_EPG-F_Courtyard.gbr  complete_EPG-F_Cu.gtl  complete_EPG-F_Fab.gbr  complete_EPG-F_Mask.gts  complete_EPG-F_Paste.gtp  complete_EPG-F_Silkscreen.gto  complete_EPG-In1_Cu.g2  complete_EPG-In2_Cu.g3  complete_EPG-NPTH-drl_map.gbr  complete_EPG-NPTH.drl  complete_EPG-PTH-drl_map.gbr  complete_EPG-PTH.drl  complete_EPG-User_Comments.gbr  complete_EPG-User_Drawings.gbr
hardware/DR3 - Shipped/complete_EPG_library.pretty/: 1N4148WX-TP.kicad_mod  Battery_Sockets.kicad_mod  CL05A105KP5NNNC.kicad_mod  D8.kicad_mod  DFN-8_DD_LIT.kicad_mod  Digital Power Pins.kicad_mod  ERA-3AEB204V.kicad_mod  ERA-6ARB182V.kicad_mod  ERA-6ARB512V.kicad_mod  ERJ-2GEJ103X.kicad_mod  ERJ-2RKF1001X.kicad_mod  ERJ-3EKF2002V.kicad_mod  LIB_DG4051EEY-T1-GE3.kicad_mod  MCP4152_104E_SN.kicad_mod  MODULE_DEV-16771.kicad_mod  OPA4134UA.kicad_mod  Perf board pin.kicad_mod  RC0402FR-07100KL.kicad_mod  RC0402FR-071ML.kicad_mod  RC0402JR-0710ML.kicad_mod  RC0805JR-13100ML.kicad_mod  RH73W2A1GNTN.kicad_mod  RH73X2A10GNTN.kicad_mod  Right angle BNC 0731010120.kicad_mod  SOT-89_4P6X2P6X1P49_STM.kicad_mod  SW_CK_JS202011CQN_DPDT_Straight.kicad_mod  Screw_Terminal_Battery.kicad_mod  Screw_Terminal_Digital_Board.kicad_mod  Screw_Terminal_Power_Supply.kicad_mod  Solder Pin.kicad_mod  mcp4725_breakout.kicad_mod
hardware/DR3 - Shipped/pga.pretty/: TSOT-23_TS8.kicad_mod
hardware/DR3 - Shipped/step files/: 731010120.stp
hardware/DR3 - Shipped/symbols-and-footprints/KiCADv6-LTC6910-3CTS8#TRMPBF/: 2024-03-09_07-05-38.kicad_sym
hardware/DR3 - Shipped/symbols-and-footprints/KiCADv6-LTC6910-3CTS8#TRMPBF/footprints.pretty/: TSOT-23_TS8_LIT-L.kicad_mod  TSOT-23_TS8_LIT-M.kicad_mod  TSOT-23_TS8_LIT.kicad_mod
hardware/DR3 - Shipped/symbols-and-footprints/LD1117S33TR/KiCADv6/: 2024-03-31_17-50-20.kicad_sym
hardware/DR3 - Shipped/symbols-and-footprints/LD1117S50TR/KiCADv6/: 2024-03-31_17-38-48.kicad_sym
hardware/DR3 - Shipped/symbols-and-footprints/LT3015EDD-3.3#PBF/: 2025-03-30_21-44-54.kicad_sym
hardware/SR1/: complete_SR1.kicad_pcb  complete_SR1.kicad_prl  complete_SR1.kicad_pro  complete_SR1.kicad_sch  custom_symbols.bak  fp-info-cache  fp-lib-table  sym-lib-table
hardware/SR1/Gerber/: complete_SR1-B_Adhesive.gbr  complete_SR1-B_Courtyard.gbr  complete_SR1-B_Cu.gbr  complete_SR1-B_Mask.gbr  complete_SR1-B_Paste.gbr  complete_SR1-B_Silkscreen.gbr  complete_SR1-Edge_Cuts.gbr  complete_SR1-F_Adhesive.gbr  complete_SR1-F_Courtyard.gbr  complete_SR1-F_Cu.gbr  complete_SR1-F_Mask.gbr  complete_SR1-F_Paste.gbr  complete_SR1-F_Silkscreen.gbr  complete_SR1-In1_Cu.gbr  complete_SR1-In2_Cu.gbr  complete_SR1-NPTH-drl_map.gbr  complete_SR1-NPTH.drl  complete_SR1-PTH-drl_map.gbr  complete_SR1-PTH.drl  complete_SR1-job.gbrjob
hardware/SR1/KiCADv6/: 2025-06-10_20-23-44.kicad_sym
hardware/SR1/KiCADv6/footprints.pretty/: CP_20_10_ADI-L.kicad_mod  CP_20_10_ADI-M.kicad_mod  CP_20_10_ADI.kicad_mod  RM_10_ADI-L.kicad_mod  RM_10_ADI-M.kicad_mod  RM_10_ADI.kicad_mod
hardware/SR1/Lib_fp.pretty/: CONN02_530480210_MOL.kicad_mod  DFN-8_DD.kicad_mod  MSOP8_MC_MCH-L.kicad_mod  MSOP8_MC_MCH-M.kicad_mod  MSOP8_MC_MCH.kicad_mod  Perf board pin.kicad_mod  Right angle BNC 0731010120.kicad_mod  SOIC127P599X175-8N.kicad_mod  SOP50P490X110-10N.kicad_mod  SOP65P490X110-8N.kicad_mod  SOP65P640X120-16N.kicad_mod
hardware/SR1/Lib_sch/: AD5370_SYM.kicad_sym  AD9838BCPZ_RL7.kicad_sym  DAC7564IAPWR.kicad_sym  INA332.kicad_sym  INA332AIDGKT.kicad_sym  LMC662CMX_NOPB.kicad_sym  LT3015EDD-3.3_PBF.kicad_sym  MCP4728T-E_UN.kicad_sym  TMUX1108.kicad_sym  TMUX1108PWR.kicad_sym
machine-learning/: IntroLab.ipynb  pyproject.toml
machine-learning/mosquito/: slurm.sh
machine-learning/sharpshooter/: firebird_shell.sh  model_evaluation.py  slurm.sh
software/: pyproject.toml
software/cs/gui/: MainWindow.py  build.py  startup_loader.py
software/cs/gui/epg_board/: BluetoothIO.py  CurrentType.py  DR3ControlSpec.yaml  EPGControlKey.py  EPGControlState.py  EPGStateManager.py  RelationsEngine.py  SpecLoader.py  _spec_tester.py  new_BLEIO.py  spec_tester.py
software/cs/gui/epg_board/bluetooth/: BLEDeviceClient.py  BLEFrameParser.py  BLEIOHandler.py  _bleio_tester.py
software/cs/gui/label_view/: DataWindow.py
software/cs/gui/live_view/: BluetoothIO.py  DevicePanel.py  DeviceViewWindow.py  EPGSettingsMonitorWindow.py  LiveDataWindow.py  LiveViewTab.py  SliderPanel.py  device_view_tester.py
software/cs/gui/live_view/device_panel/: BluetoothState.py  BluetoothStateChecker.py  DeviceManager.py  DevicePanel.py  DevicePanelWidgets.py
software/cs/gui/live_view/slider_panel/: DefaultSliderPanel.py  EngineeringSliderPanel.py  SliderPanel.py  SliderRow.py
software/cs/gui/settings/: Settings.py  SettingsWindow.py  __init__.py
software/cs/gui/utils/: AboutDialog.py  CommentMarker.py  PanZoomViewBox.py  ToggleSwitch.py
(+30 files in other folders)
