[project]
name = "epg-machine-learning"
version = "0.1.0"
description = "Machine learning development for SCIDO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "distinctipy>=1.3.4",
    "importlib>=1.0.4",
    "matplotlib>=3.10.6",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "positional-encodings>=6.0.4",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
# code duplicated for visibility of extras (uv idiosyncrasy)
cpu   = ["torch>=2.8.0", "torchvision>=0.23.0", "torchaudio>=2.8.0"]
cu126 = ["torch>=2.8.0", "torchvision>=0.23.0", "torchaudio>=2.8.0"] 
cu128 = ["torch>=2.8.0", "torchvision>=0.23.0", "torchaudio>=2.8.0"] 
cu129 = ["torch>=2.8.0", "torchvision>=0.23.0", "torchaudio>=2.8.0"]

[tool.uv]
# don't allow multiple CUDA extras together
conflicts = [[{extra="cpu"}, {extra="cu126"}, {extra="cu128"}, {extra="cu129"}]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu129", extra = "cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu129", extra = "cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu129", extra = "cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
