[project]
name = "scido"
version = "0.2.0"
description = "SCIDO - Supervised Classification of Insect Data and Observations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=1.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "positional-encodings>=6.0.4",
    "pyarrow>=21.0.0",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "winrt-windows-devices-radios>=3.2.1 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
# code duplicated for visibility of extras (uv idiosyncrasy)
cpu   = ["torch>=2.8.0", "torchvision>=0.23.0", "torchaudio>=2.8.0"]
cu126 = ["torch>=2.8.0", "torchvision>=0.23.0", "torchaudio>=2.8.0"] 
cu128 = ["torch>=2.8.0", "torchvision>=0.23.0", "torchaudio>=2.8.0"] 
cu129 = ["torch>=2.8.0", "torchvision>=0.23.0", "torchaudio>=2.8.0"]

[tool.uv]
# don't allow multiple CUDA extras together
conflicts = [[{extra="cpu"}, {extra="cu126"}, {extra="cu128"}, {extra="cu129"}]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu129", extra = "cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu129", extra = "cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu129", extra = "cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
